--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-validation": "^3.0.8",
     "json-loader": "^0.5.7",
